--- a/history/category.html
+++ b/history/category.html
@@ -367,6 +367,162 @@
                                 </div>
                             </div>
                         </div>
+                        
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">History</a>
+                                </div>
+                                <h4 class="font-pt">UW校友群英谱（1）</h4>
+                                <p class="gazette-post-date">2022年4月18日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/Alumni01.png" style="max-height: 250px; width: auto;"
+                                        alt="UW校友群英谱（1）">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>麦迪讯主编红炉主人结合自己正在进行的公共史学研究项目，将我校其他杰出华裔校友的故事公之于众，一方面彰显前辈学人的功绩，鼓励年轻一代留学生奋发图强；另一方面，呼吁更多同学加入威大华裔历史记忆的保护工程，作出自己的微小贡献。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="UW_Alumni_01.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">History</a>
+                                </div>
+                                <h4 class="font-pt">UW校友群英谱（2）</h4>
+                                <p class="gazette-post-date">2022年4月25日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/Alumni15.png" style="max-height: 250px; width: auto;"
+                                        alt="UW校友群英谱（2）">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>上回我们介绍了UW-Madison 政治系和英语文学系的知名华裔校友，这次我们将披露一些珍贵的影像资料，以及一段被尘封九十多年的发生在中国留学生和美国女孩之间的爱情往事。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="UW_Alumni_02.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">History</a>
+                                </div>
+                                <h4 class="font-pt">UW校友群英谱（3）</h4>
+                                <p class="gazette-post-date">2022年5月3日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/Alumni53.jpg" style="max-height: 250px; width: auto;"
+                                        alt="UW校友群英谱（3）">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>前两期文章我们讲述了威斯康星大学华裔杰出校友的故事，今天我们将换一个视角，讲一讲美国籍的威大校友在中国的故事。这也是我们这个公共史学项目的一部分：我们既要将威大华裔校友的事迹公之于众，也要记录那些在威斯康星思想（Wisconsin Idea）的感召下，不远万里来到中国的美国人。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="UW_Alumni_03.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">History</a>
+                                </div>
+                                <h4 class="font-pt">UW校友群英谱（4）</h4>
+                                <p class="gazette-post-date">2022年5月12日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/Alumni62.png" style="max-height: 250px; width: auto;"
+                                        alt="UW校友群英谱（4）">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>最近一个时期，中国的内外形势变得复杂多变，中国学生在异国他乡难免会遇到歧视和偏见，顿时感到国族身份认同对个人的重要性，因此就有了“人在海外，方知爱国”之说。那么，让我们回到百年前的威大校园，看看在那些重大历史时刻，前辈留学生们是如何以实际行动来诠释“少年中国”之精神的。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="UW_Alumni_04.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">History</a>
+                                </div>
+                                <h4 class="font-pt">UW校友群英谱（5）</h4>
+                                <p class="gazette-post-date">2022年6月7日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/Alumni92.jpg" style="max-height: 250px; width: auto;"
+                                        alt="UW校友群英谱（5）">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>在第一次国内革命战争达到高潮时，在威大的中国留学生的政治运动也愈发地频繁了。威斯康星当地报纸提到，在威大的中国学生大多数都拥护孙中山的三民主义，其中的一部分还是共产主义的支持者。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="UW_Alumni_05.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">History</a>
+                                </div>
+                                <h4 class="font-pt">UW群英谱番外篇(1)</h4>
+                                <p class="gazette-post-date">2022年5月24日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/Alumni104.jpg" style="max-height: 250px; width: auto;"
+                                        alt="UW群英谱番外篇(1)">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>1911年9月，在走向共和的前夜，旅美中国学生会在麦迪逊举行了第二次年会。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="UW_Alumni_Extra_01.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
 
 
