--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Jul 18, 2022</p>
+                            <p>Jul 25, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,19 +294,19 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年7月11日~17日一周疫情简报：
+                                <p>2022年7月18日~24日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所上升（升高22%），病例总数超过154万例，平均每日增长1608例（上周为1315例）；累计死亡13184人，最近一周新增死亡17人（上周为17人）。
-                                    
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+2105）、戴恩郡Madison（+1622）、沃基肖郡Waukesha（+654）、布朗郡Green Bay（+466）、Rock郡（+346）、Winnebago郡（+320）、拉辛郡Racine（+315）、Outagamie郡（+313）、Kenosha郡（+304）、Marathon郡（+264）、La Crosse郡（+258）、Sheboygan郡（+227）、Washington郡（+215）、Fond du Lac郡（+204）、Eau Claire郡（+200）、Wood郡（+192）、Walworth郡（+166）、Portage郡（+162）、Jefferson郡（+161）、St. Croix郡（+154）、Manitowoc郡（+151），其他郡一周新增人数在130人以下。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所上升（升高9%），病例总数超过155万例，平均每日增长1753例（上周为1608例）；累计死亡13204人，最近一周新增死亡20人（上周为17人）。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所下降（降低21%），目前病例总数为146029例，周内新增1617例，平均每日增长231例（上周为292例），一周平均检测阳性率为14.3%（稍低于上周的15.2%）。戴恩郡新冠住院病人数目由60人升至70人；重症病房新冠病人数目由7人降至6人；累计死亡497例，新增2例（上周为2例）。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+2202）、戴恩郡Madison（+1614）、沃基肖郡Waukesha（+666）、布朗郡Green Bay（+538）、Rock郡（+403）、拉辛郡Racine（+349）、Winnebago郡（+340）、Outagamie郡（+325）、Marathon郡（+316）、Kenosha郡（+296）、La Crosse郡（+286）、Washington郡（+284）、Eau Claire郡（+275）、Fond du Lac郡（+241）、Wood郡（+222）、Sheboygan郡（+203），其他郡一周新增人数在200人以下。
 
-                                    <br><br>—  截止到7月17日，戴恩郡接种至少一剂疫苗者超过46.1万人，占总人口83.5%；完成接种疫苗者超过43.8万人，占总人口的79.3%；完成接种加强针者占63.8%。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度与上周大致持平，目前病例总数为147650例，周内新增1621例，平均每日增长232例（上周为231例），一周平均检测阳性率为14.0%（稍低于上周的14.3%）。戴恩郡新冠住院病人数目由70人降至61人；重症病房新冠病人数目由6人降至5人；累计死亡502例，新增5例（上周为2例）。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：戴恩郡东南边界附近（靠近Edgerton与Lake Koshkonong）、MSN机场附近、Beltline高速以东的Old Sauk Rd北侧（至Strickner's Park与铁路）、Beltline高速西南侧至County Road M与Mid Town Rd、MSN机场东侧至I-39高速、Lake Monona东北岸至I-39高速、Westmorland Community Park附近等，详情请查看所附地图。
+                                    <br><br>—  截止到7月24日，戴恩郡接种至少一剂疫苗者超过46.1万人，占总人口83.5%；完成接种疫苗者超过43.8万人，占总人口的79.3%；完成接种加强针者占63.8%。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性72例（高于上周的62例），一周检测阳性率为13.1%（稍高于上周的12.4%）。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：戴恩郡东南边界附近（靠近Edgerton与Lake Koshkonong）、Lake Monona东岸（Monona市北部，至Monona Dr）、Lake Mendota东北岸（至Northport Dr）、MSN机场西南侧（Warner Park东南）、Lake Monona东北岸（East Morland Park附近）、Lake Waubesa东北岸（至Beltline高速与I-39高速）等，详情请查看所附地图。
+
+                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性78例（高于上周的72例），一周检测阳性率为11.8%（低于上周的13.1%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
