--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Aug 1, 2022</p>
+                            <p>Aug 8, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,19 +294,19 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年7月25日~31日一周疫情简报：
+                                <p>2022年8月1日~7日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周大致持平，病例总数超过156万例，平均每日增长1749例（上周为1753例）；累计死亡13229人，最近一周新增死亡25人（上周为20人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低6%），病例总数超过158万例，平均每日增长1635例（上周为1749例）；累计死亡13240人，最近一周新增死亡11人（上周为25人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+2232）、戴恩郡Madison（+1522）、沃基肖郡Waukesha（+712）、布朗郡Green Bay（+632）、拉辛郡Racine（+372）、Rock（+355）、Winnebago（+339）、Kenosha（+332）、Marathon（+331）、Outagamie（+316）、La Crosse（+275）、Fond du Lac（+256）、Eau Claire（+247）、Sheboygan（+217）、Washington（+214）、Wood（+207），其他郡一周新增人数在200人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1961）、戴恩郡Madison（+1451）、沃基肖郡Waukesha（+632）、布朗郡Green Bay（+562）、Winnebago郡（+404）、拉辛郡Racine（+373）、Rock郡（+371）、Marathon郡（+321）、La Crosse郡（+304）、Washington郡（+302）、Outagamie郡（+282）、Kenosha郡（+278）、Fond du Lac郡（+233），其他郡一周新增人数在200人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有下降（降低），目前病例总数为149172例，周内新增1522例，平均每日增长217例（上周为232例），一周平均检测阳性率为13.8%（稍低于上周的14.0%）。戴恩郡新冠住院病人数目由61人升至65人；重症病房新冠病人数目由5人升至7人；累计死亡505例，新增3例（上周为5例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有下降（降低5%），目前病例总数为150620例，周内新增1448例，平均每日增长207例（上周为217例），一周平均检测阳性率为14.3%（稍高于上周的13.8%）。戴恩郡新冠住院病人数目由65人升至73人；重症病房新冠病人数目在7人左右波动；累计死亡506例，新增1例（上周为3例）。
+                                   
+                                    <br><br>—  截止到8月7日，戴恩郡接种至少一剂疫苗者超过46.1万人，占总人口83.6%；完成接种疫苗者超过43.8万人，占总人口的79.4%；完成接种加强针者占63.6%。
 
-                                    <br><br>—  截止到7月31日，戴恩郡接种至少一剂疫苗者超过46.1万人，占总人口83.6%；完成接种疫苗者超过43.8万人，占总人口的79.3%；完成接种加强针者占63.5%。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Lake Mendota东北岸（Northport Dr以南）及其东部的Northland Manor Park南部一带、MSN机场附近、戴恩郡东南部的Stoughton东北部、Lake Mendota西岸至Middleton市东北部、Heistand Park附近、Lake Waubesa东北岸（至Beltline高速与I-39高速）等，详情请查看所附地图。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Beltline高速258号出口西侧（Raymond Rd最东段附近）、Lake Waubesa东北岸（至Beltline高速与I-39高速）、Hilldale Mall以南大片区域（包括Sheboygan Ave，北至Univ Ave、南至Mineral Point Rd、东至Franklin Ave、西至Whitney Way）、Lake Monona东岸（Monona市北部，至Monona Dr）、Lake Monona南岸等，详情请查看所附地图。
-
-                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性66例（低于上周的78例），一周检测阳性率为11.8%（同上周）。
+                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性43例（低于上周的66例），一周检测阳性率为9.1（低于上周的11.8%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
