weekly covid update

--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -294,19 +294,19 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年8月1日~7日一周疫情简报：
+                                <p>2022年8月8日~14日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低6%），病例总数超过158万例，平均每日增长1635例（上周为1749例）；累计死亡13240人，最近一周新增死亡11人（上周为25人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低8%），病例总数超过159万例，平均每日增长1498例（上周为1635例）；累计死亡13267人，最近一周新增死亡27人（上周为11人）。
 
-                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1961）、戴恩郡Madison（+1451）、沃基肖郡Waukesha（+632）、布朗郡Green Bay（+562）、Winnebago郡（+404）、拉辛郡Racine（+373）、Rock郡（+371）、Marathon郡（+321）、La Crosse郡（+304）、Washington郡（+302）、Outagamie郡（+282）、Kenosha郡（+278）、Fond du Lac郡（+233），其他郡一周新增人数在200人以下。
+                                    <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1714）、戴恩郡Madison（+1112）、沃基肖郡Waukesha（+590）、布朗郡Green Bay（+551）、Winnebago郡（+417）、拉辛郡Racine（+392）、Rock郡（+345）、Outagamie郡（+328）、Kenosha郡（+277）、Marathon郡（+266）、Washington郡（+257）、La Crosse郡（+242）、Fond du Lac郡（+219）、St. Croix郡（+207），其他郡一周新增人数在200人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周稍有下降（降低5%），目前病例总数为150620例，周内新增1448例，平均每日增长207例（上周为217例），一周平均检测阳性率为14.3%（稍高于上周的13.8%）。戴恩郡新冠住院病人数目由65人升至73人；重症病房新冠病人数目在7人左右波动；累计死亡506例，新增1例（上周为3例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所下降（降低24%），目前病例总数为151722例，周内新增1102例，平均每日增长157例（上周为207例），一周平均检测阳性率为12.8%（低于上周的14.3%）。戴恩郡新冠住院病人数目由73人降至67人；重症病房新冠病人数目在8人左右波动；累计死亡506例，新增0例（上周为1例）。
                                    
-                                    <br><br>—  截止到8月7日，戴恩郡接种至少一剂疫苗者超过46.1万人，占总人口83.6%；完成接种疫苗者超过43.8万人，占总人口的79.4%；完成接种加强针者占63.6%。
+                                    <br><br>—  截止到8月14日，戴恩郡接种至少一剂疫苗者超过46.1万人，占总人口83.6%；完成接种疫苗者超过43.8万人，占总人口的79.4%；完成接种加强针者占63.7%。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Lake Mendota东北岸（Northport Dr以南）及其东部的Northland Manor Park南部一带、MSN机场附近、戴恩郡东南部的Stoughton东北部、Lake Mendota西岸至Middleton市东北部、Heistand Park附近、Lake Waubesa东北岸（至Beltline高速与I-39高速）等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：麦迪逊市西部Old Middleton Rd与Mineral Point Rd之间部分区域（Glen Oak Hills Park与Garner Park附近）、Lake Mendota东北岸（Northport Dr以南，东至Warner Park附近）、Lake Monona南部的Beltline高速沿线附近、戴恩郡东南部的Stoughton东北部、Lake Monona东北岸（Commercial Ave以南，包括Starkweather Park与Olbrich Park）、戴恩郡北部边界附近等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性43例（低于上周的66例），一周检测阳性率为9.1（低于上周的11.8%）。
+                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性47例（高于上周的43例），一周检测阳性率为10.2%（高100于上周的9.1%）。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
