updated business & society & commentary

--- a/business/category.html
+++ b/business/category.html
@@ -271,6 +271,62 @@
                                 <div class="gazette-post-tag">
                                     <a href="#">Business</a>
                                 </div>
+                                <h4 class="font-pt">从中美摩擦到中概股回归</h4>
+                                <p class="gazette-post-date">2022年8月9日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/friction/friction_img_2.png" style="max-height: 250px; width: auto;"
+                                        alt="friction">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>本期经济专栏，我们来浅谈一下中美资本市场中热点的在美上市的中国企业回归中国股票市场的话题，在正式进入中概股回归之前，我们先来简单介绍一下从特朗普执政期间到当今中美出现的摩擦。
+首先先把时间线拨回2018年3月23日，美国正式宣布对中国多种商品征收多达 600 亿美元的惩罚性 关税， 中美贸易摩擦正式开始 。
+</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="friction.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Business</a>
+                                </div>
+                                <h4 class="font-pt">浅谈国家医保局药品及医疗设备集中采购对医疗行业的影响</h4>
+                                <p class="gazette-post-date">2022年8月6日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/medical_insurance/medical_insurance_img_1.png" style="max-height: 250px; width: auto;"
+                                        alt="medical_insurance">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>本期市场专栏，我们来浅谈一下我们国家的药品集中采购制度。药品从药厂到病人，以前经历过分散采购，市级政府招标采购，省级采购三个阶段，目前，我国已进入了药品国家 组织集中采购的新阶段。那么，为什么要进行越高级别的药品采购呢？对于这个问题，我们可以用点外卖的例子来看。很多外卖平台都有满减活动，意思就是点的越多，减的越多。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="medical_insurance.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Business</a>
+                                </div>
                                 <h4 class="font-pt">美国公布22年来最大加息幅度</h4>
                                 <p class="gazette-post-date">2022年5月4日</p>
                                 <!-- Post Thumbnail -->
