--- a/society/category.html
+++ b/society/category.html
@@ -264,6 +264,75 @@
                     <div class="row justify-content-center section_padding_100">
 
 
+
+                         <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Society</a>
+                                </div>
+                                <h4 class="font-pt">卫生服务部称：威斯康星州农贸市场的带壳豌豆导致至少6人感染沙门氏菌</h4>
+                                <p class="gazette-post-date">2022年7月29日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/salmonella/salmonella_img_6.png" style="max-height: 250px; width: auto;"
+                                        alt="卫生服务部称：威斯康星州农贸市场的带壳豌豆导致至少6人感染沙门氏菌">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p> 威斯康星州麦迪逊市--该州卫生服务部周五说，至少有6人在购买了由Green Barn Farm Market生产并在麦迪逊在内的威斯康星州部分地区的农贸市场销售的带壳豌豆后，感染了沙门氏菌。
+
+
+卫生服务部在一份新闻稿中说，这些豌豆是在麦迪逊的Farmers’ markets 和 Green Barn Farm Market 摊位上出售的。
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="salmonella.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Society</a>
+                                </div>
+                                <h4 class="font-pt">一名男子因在州街性侵被捕；在麦迪逊枪杀18岁男孩的凶手仍在逃</h4>
+                                <p class="gazette-post-date">2022年7月28日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/sexual_assault/sexual_assault_img_2.jpeg" style="max-height: 250px; width: auto;"
+                                        alt="在麦迪逊被枪杀的18岁男孩的家属请求公众帮助寻找凶手">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>警方逮捕了一名22岁的男子，他与麦迪逊市中心的一起性侵案有关。
+
+
+司法部官员表示，他们已于周三下午逮捕了这名男子，他将面临一级性侵犯和非法拘禁的初步指控。
+
+
+周日凌晨，一名女子告诉警方，她在500 block of State Street 街区等待一名司机来接她时，遭到两名男子袭击，之后当局开始调查此事。
+
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="sexual_assault.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
                         <div class="col-12 col-md-4">
                             <!-- Gazette Welcome Post -->
                             <div class="gazette-welcome-post">
