--- a/commentary/category.html
+++ b/commentary/category.html
@@ -261,6 +261,35 @@
             <div class="catagory-welcome-post-area">
                 <div class="container">
                     <div class="row justify-content-center section_padding_100 ">
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Commentary</a>
+                                </div>
+                                <h4 class="font-pt">从房屋预售制到三道红线再到烂尾楼</h4>
+                                <p class="gazette-post-date">2022年7月25日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/unfinished_building/unfinished_building_img_1.png"
+                                        style="max-height: 250px; width: auto;" alt="从房屋预售制到三道红线再到烂尾楼">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>
+                                  近期个别地区烂尾楼盘事件发酵，引起市场关注 ， 在全国看来，河南省出现烂尾项目属于最多。 对于买房人来说，可谓是最头疼的问题 ，好不容易攒够买房钱，到头来却房财两空。对此，部分购房者联名决定停止支付向银行的房贷，也就是我们在新闻中看到的“停贷”，那么， 烂尾楼和停贷事件之后会对社会，特别是银行业，产生什么影响呢？
+                                </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="unfinished_building.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         
                         
                         <div class="col-12 col-md-4">
