--- a/global/category.html
+++ b/global/category.html
@@ -736,6 +736,58 @@
                                 </div>
                             </div>
                         </div>
+                        
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Global</a>
+                                </div>
+                                <h4 class="font-pt">媒体指佩洛西将抵台湾</h4>
+                                <p class="gazette-post-date">2022年8月2日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/AUG02_Pelosi_TW.png" style="max-height: 250px; width: auto;"
+                                        alt="媒体指佩洛西将抵台湾">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>多方消息指，美国众议院议长佩洛西（Nancy Pelosi）最快可能周二（2日）晚间抵台过夜。美国白宫虽未证实有关报道，但强调佩洛西有权访问台湾。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="AUG02_Pelosi_TW.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Global</a>
+                                </div>
+                                <h4 class="font-pt">美国华裔抗议“佩洛西欲窜访台湾”</h4>
+                                <p class="gazette-post-date">2022年8月2日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/AUG02_Pelosi_TW_Protest.jpg" style="max-height: 250px; width: auto;"
+                                        alt="美国华裔抗议“佩洛西欲窜访台湾”">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>据美国“旧金山标准”（The San Francisco Standard）新闻网报道，当地时间1日，由美国华裔及“反战人士”等百人组成的抗议群体聚集在旧金山联邦政府大楼外，痛斥美国众议院议长佩洛西欲窜访台湾的计划。</p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="AUG02_Pelosi_TW_Protest.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
 
 
