--- a/campus/category.html
+++ b/campus/category.html
@@ -265,6 +265,72 @@
 
 
 
+
+                        <div class="col-12 col-md-4">
+                          <!-- Gazette Welcome Post -->
+                          <div class="gazette-welcome-post">
+                              <!-- Post Tag -->
+                              <div class="gazette-post-tag">
+                                  <a href="#">Campus</a>
+                              </div>
+                              <h4 class="font-pt">校内校外有哪些赚钱省钱的办法？</h4>
+                              <p class="gazette-post-date">2022年8月16日</p>
+                              <!-- Post Thumbnail -->
+                              <div class="blog-post-thumbnail my-5">
+                                  <img src="img/money/money_img_3.jpeg" style="max-height: 250px; width: auto;">
+                              </div>
+                              <!-- Post Excerpt -->
+                              <p>资金不足时如何寻求学校帮助？
+
+校内有哪些赚钱的办法？
+
+你还不知道学费可以分期付款缓解经济压力？
+
+你还错过了哪些日常福利和薅羊毛的机会？
+
+本篇攻略告诉你校内校外赚钱省钱的办法！
+
+</p>
+                              <!-- Reading More -->
+                              <div class="post-continue-reading-share mt-30">
+                                  <div class="post-continue-btn">
+                                      <a href="money.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                              class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
+
+                        <div class="col-12 col-md-4">
+                          <!-- Gazette Welcome Post -->
+                          <div class="gazette-welcome-post">
+                              <!-- Post Tag -->
+                              <div class="gazette-post-tag">
+                                  <a href="#">Campus</a>
+                              </div>
+                              <h4 class="font-pt">学费、国家资助和多样性：新任威大学校校长的议程听起来耳熟能详</h4>
+                              <p class="gazette-post-date">2022年8月11日</p>
+                              <!-- Post Thumbnail -->
+                              <div class="blog-post-thumbnail my-5">
+                                  <img src="img/principal/principal_img_2.jpeg" style="max-height: 250px; width: auto;">
+                              </div>
+                              <!-- Post Excerpt -->
+                              <p>Jennifer Mnookin出任威斯康辛大学麦迪逊分校第30任校长，她在校园的第一天与学生、教职员工和校园领导进行了会谈。
+
+
+Mnookin之前担任加州大学洛杉矶分校法学院院长，现在她来到麦迪逊，她的主要目标是与威斯康辛大学麦迪逊分校的学生、教职员工、社区和州领导人进行对话，讨论如何让威斯康辛大学麦迪逊分校的学生负担得起学费，同时解决诸如无障碍、资金和多样性等问题。</p>
+                              <!-- Reading More -->
+                              <div class="post-continue-reading-share mt-30">
+                                  <div class="post-continue-btn">
+                                      <a href="principal.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                              class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
+
                         <div class="col-12 col-md-4">
                           <!-- Gazette Welcome Post -->
                           <div class="gazette-welcome-post">
