--- a/pandemic/pandemic.html
+++ b/pandemic/pandemic.html
@@ -250,7 +250,7 @@
                                 <a href="">Pandemic</a>
                             </div>
                             <h2 class="font-pt">新冠疫情信息汇总</h2>
-                            <p>Aug 22, 2022</p>
+                            <p>Aug 29, 2022</p>
                             <p>作者：阿特拉斯</p>
                         </div>
                     </div>
@@ -294,19 +294,19 @@
                             </div>
                             <div class="col-12 col-lg-12">
 
-                                <p>2022年8月15日~21日一周疫情简报：
+                                <p>2022年8月22日~28日一周疫情简报：
 
-                                    <br><br>—  威斯康星州疫情增长速度较上周稍有下降（降低1%），病例总数超过160万例，平均每日增长1488例（上周为1498例）；累计死亡13299人，最近一周新增死亡32人（上周为27人）。
+                                    <br><br>—  威斯康星州疫情增长速度较上周有所下降（降低12%），病例总数超过161万例，平均每日增长1310例（上周为1488例）；累计死亡13336人，最近一周新增死亡37人（上周为32人）。
 
                                     <br><br>—  威斯康星州一周新增病例数目最多的地区包括密尔沃基郡Milwaukee（+1612）、戴恩郡Madison（+1202）、沃基肖郡Waukesha（+496）、Sauk郡（+474）、布朗郡Green Bay（+442）、Winnebago郡（+364）、Outagamie郡（+315）、Rock郡（+311）、拉辛郡Racine（+298）、Marathon郡（+261）、Columbia郡（+247）、Kenosha郡（+242）、La Crosse郡（+239）、Washington郡（+219）、Fond du Lac郡（+182）、St. Croix郡（+166）、Eau Claire郡（+161），其他郡一周新增人数在150人以下。
 
-                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所上升（升高8%），目前病例总数为152908例，周内新增1186例，平均每日增长169例（上周为157例），一周平均检测阳性率为12.2%（低于上周的12.8%）。戴恩郡新冠住院病人数目由67人降至62人；重症病房新冠病人数目由8人降至6人；累计死亡511例，新增5例（上周为0例）。
+                                    <br><br>—  戴恩郡（包括麦迪逊市）疫情增长速度较上周有所下降（降低11%），目前病例总数为153968例，周内新增1060例，平均每日增长151例（上周为169例），一周平均检测阳性率为12.0%（稍低于上周的12.2%）。戴恩郡新冠住院病人数目由62人升至68人；重症病房新冠病人数目由6人降至4人；累计死亡515例，新增4例（上周为5例）。
                                    
-                                    <br><br>—  截止到8月21日，戴恩郡接种至少一剂疫苗者超过46.2万人，占总人口83.7%；完成接种疫苗者超过43.8万人，占总人口的79.4%；完成接种加强针者占63.7%。
+                                    <br><br>—  截止到8月25日，戴恩郡接种至少一剂疫苗者超过46.2万人，占总人口83.7%；完成接种疫苗者超过43.8万人，占总人口的79.4%；完成接种加强针者占63.8%。
 
-                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：戴恩郡西北部及北部边界附近的大片区域、Lake Mendota东北岸（Northport Dr以南，东至Katherine Wells Central Park附近）、Sun Prairie市西部、Lake Monona东北岸（北至Starkweather Park、东至S Stoughton Rd）、Lake Mondota西岸（Middleton市东北）等，详情请查看所附地图。
+                                    <br><br>—  基于戴恩郡各统计区新增病例数目在人口中的比例，疫情相对高发区域更新如下：Beltline高速西南部分区域（S High Point以西、Mid-Town Rd以北）、Lake Monona东北岸（北至Starkweather Park、东至S Stoughton Rd）、Lake Monona南岸及临近的Beltline高速以南、Lake Monona西南岸部分区域（W Washington Ave东南，靠近Brittingham Park）、MSN机场附近等，详情请查看所附地图。
 
-                                    <br><br>—  威斯康星大学麦迪逊分校上周（8月15日-19日）校内核酸检测暂停，将于本周一（8月22日）起恢复。
+                                    <br><br>—  威斯康星大学麦迪逊分校最近一周内共新增阳性50例，包括学生35例、职工15例。一周检测阳性率为学生17.3%，职工8.0%。
 
                                     <br><br>（数据来源：威斯康星州卫生服务部、麦迪逊与戴恩郡公共卫生局、威大“新冠应对”信息平台；每周二发布于“麦迪讯”微信公众号：Madison_news）
 
