update monkeypox on homepage

--- a/index.html
+++ b/index.html
@@ -333,17 +333,17 @@
                         <!-- Single Today Post -->
                         <div class="gazette-single-todays-post d-md-flex align-items-start mb-50">
                             <div class="todays-post-thumb">
-                                <img src="commentary/img/1_2.jpg" alt="">
+                                <img src="tech/img/monkeypox2.png" alt="">
                             </div>
                             <div class="todays-post-content">
                                 <!-- Post Tag -->
                                 <div class="gazette-post-tag">
-                                    <a href="commentary/">Commentary</a>
+                                    <a href="tech/">Tech</a>
                                 </div>
-                                <h3><a href="commentary/eight_children.html" class="font-pt mb-2">丰县八孩事件，我们怎么看？</a></h3>
-                                <span class="gazette-post-date mb-2">January 7, 2021</span>
-                                <a class="post-total-comments">作者：红炉主人</a>
-                                <p>丰县八孩事件发酵已经一个多月了，据最新消息，江苏省委省政府成立“丰县生育八孩女子”事件调查组，整个事件已经进入最关键的阶段。 此前，大量的媒体人不畏威胁，赶赴事发的丰县欢口镇进行调查，当地的居民也陆续提供线索，大量的细节被披露出来... </p>
+                                <h3><a href="tech/monkeypox.html" class="font-pt mb-2">面对猴痘病毒，我们应该如何应对？</a></h3>
+                                <span class="gazette-post-date mb-2">August 24, 2022</span>
+                                <a class="post-total-comments">作者：清风</a>
+                                <p>猴痘是一种属于正痘病毒属的病毒，该病毒家族也包括天花。与天花一样，它是一种大型DNA病毒，对皮肤组织有特殊的偏好。然而，天花只影响人类，这意味着我们能够通过全球范围内的大规模疫苗接种来根除它，而猴痘是由动物病毒库携带的。而且，尽管它的名字叫 "猴痘"，但它并不是源于猴子。"猴痘 "一词是在1958年丹麦首次在圈养灵长类动物中发现该病毒时发明的，但在自然界中，该病毒最常在松鼠和其他啮齿动物中出现。</p>
                             </div>
                         </div>
 
