--- a/campus/category.html
+++ b/campus/category.html
@@ -263,7 +263,30 @@
                     <div class="row justify-content-center section_padding_100">
 
 
-
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Campus</a>
+                                </div>
+                                <h4 class="font-pt">【麦迪逊生活指南】在公交车上丢了东西怎么办？</h4>
+                                <p class="gazette-post-date">2022年8月24日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>本篇文章以个人经历为大家提供指南：坐公交丢失物品时，如何Report和找回丢失的物品。
+                                  </p>
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="lostThingsOnBus.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                                class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
 
                         <div class="col-12 col-md-4">
@@ -282,15 +305,15 @@
                               <!-- Post Excerpt -->
                               <p>资金不足时如何寻求学校帮助？
 
-校内有哪些赚钱的办法？
+                                    校内有哪些赚钱的办法？
 
-你还不知道学费可以分期付款缓解经济压力？
+                                    你还不知道学费可以分期付款缓解经济压力？
 
-你还错过了哪些日常福利和薅羊毛的机会？
+                                你还错过了哪些日常福利和薅羊毛的机会？
 
-本篇攻略告诉你校内校外赚钱省钱的办法！
+                                本篇攻略告诉你校内校外赚钱省钱的办法！
 
-</p>
+                                </p>
                               <!-- Reading More -->
                               <div class="post-continue-reading-share mt-30">
                                   <div class="post-continue-btn">
