--- a/index.html
+++ b/index.html
@@ -350,34 +350,35 @@
                         <!-- Single Today Post -->
                         <div class="gazette-single-todays-post d-md-flex align-items-start mb-50">
                             <div class="todays-post-thumb">
-                                <img src="tech/img/omicron9.jpg" alt="">
                             </div>
                             <div class="todays-post-content">
                                 <!-- Post Tag -->
                                 <div class="gazette-post-tag">
-                                    <a href="tech/category.html">Tech</a>
+                                    <a href="campus/category.html">Campus</a>
                                 </div>
-                                <h3><a href="file:///Users/wenxiyang/Documents/GitHub/website/tech/omicron.html" class="font-pt mb-2">奥密克戎毒株科普以及美国近期新冠疫情分析</a></h3>
-                                <p class="gazette-post-date mb-2">January 25, 2021</p>
-                                <a class="post-total-comments">作者：空谷幽兰</a>
-                                <p>最近，奥密克戎毒株在美国的流行打破了许多人对于疫情结束的幻想，奥密克戎以前所未有的速度在美利坚的土地上肆意驰骋，所到之处感染率飙升。那么，奥密克戎毒株究竟和以往的新冠毒株有着怎样的区别？奥密克戎目前流行的情况如何？我们留学生应该如何防御这种病毒呢？本篇文章就将对这几个问题进行深入分析，给尚在美国的海外学子们敲响警钟。 奥密克戎疫情可能是迄今为止传播最为凶险的一波疫情，这样的说法绝非危言耸听。</p>
+                                <h3><a href="campus/lostThingsOnBus.html" class="font-pt mb-2">【麦迪逊生活指南】在公交车上丢了东西怎么办？</a></h3>
+                                <span class="gazette-post-date mb-2">August 24, 2022</span>
+                                <a class="post-total-comments">作者：不吃香菜</a>
+                                <p>本篇文章以个人经历为大家提供指南：坐公交丢失物品时，如何Report和找回丢失的物品。</p>
                             </div>
                         </div>
+
                         
+
                         <!-- Single Today Post -->
                         <div class="gazette-single-todays-post d-md-flex align-items-start mb-50">
                             <div class="todays-post-thumb">
-                                <img src="politics/img/aoc4img3.png" alt="">
+                                <img src="campus/img/money/money_img_10.jpeg" alt="">
                             </div>
                             <div class="todays-post-content">
                                 <!-- Post Tag -->
                                 <div class="gazette-post-tag">
-                                    <a href="politics/category.html">Politics</a>
+                                    <a href="campus/category.html">Campus</a>
                                 </div>
-                                <h3><a href="politics/aoc4.html" class="font-pt mb-2">左翼反建制派的政策优势</a></h3>
-                                <p class="gazette-post-date mb-2">January 1, 2021</p>
-                                <a class="post-total-comments">作者：格鲁希</a>
-                                <p>在前三篇文章中，我们介绍了克劳利的竞选优势（AOC的劣势）。首先，AOC想要进入国会，就必须进入垄断美国政治的两党之一，她于是参加了民主党的初选，直面已经连任了十届众议员的克劳利。作为民主党建制派，克劳利拥有强大的人脉，收获了大量知名政客和政治组织的背书。同时，克劳利还有金钱优势，通过自己和大企业的密切关系，募到了超AOC十倍的竞选资金。 但是，尽管在名望，人脉和资金上都远不如克劳利，AOC也有自己的优势：受欢迎的左翼政策，反建制派的形象，以及努力的竞选团队。本文将介绍AOC的第一大优势，她受欢迎的政策主张。 </p>
+                                <h3><a href="campus/money.html" class="font-pt mb-2">【攻略】校内校外有哪些赚钱省钱的办法？</a></h3>
+                                <p class="gazette-post-date mb-2">August 16, 2022</p>
+                                <a class="post-total-comments">作者：不吃香菜</a>
+                                <p>资金不足时如何寻求学校帮助？校内有哪些赚钱的办法？你还不知道学费可以分期付款缓解经济压力？你还错过了哪些日常福利和薅羊毛的机会？本篇攻略告诉你校内校外赚钱省钱的办法！</p>
                             </div>
                         </div>
 
