--- a/tech/category.html
+++ b/tech/category.html
@@ -263,6 +263,33 @@
                 <div class="container">
                     <div class="row justify-content-center section_padding_100">
 
+                        <div class="col-12 col-md-4">
+                            <!-- Gazette Welcome Post -->
+                            <div class="gazette-welcome-post">
+                                <!-- Post Tag -->
+                                <div class="gazette-post-tag">
+                                    <a href="#">Tech</a>
+                                </div>
+                                <h4 class="font-pt">面对猴痘病毒，我们应该如何应对？</h4>
+                                <p class="gazette-post-date">2022年8月24日</p>
+                                <!-- Post Thumbnail -->
+                                <div class="blog-post-thumbnail my-5">
+                                    <img src="img/monkeypox2.png" style="max-height: 250px; width: auto;"
+                                        alt="">
+                                </div>
+                                <!-- Post Excerpt -->
+                                <p>猴痘是一种属于正痘病毒属的病毒，该病毒家族也包括天花。与天花一样，它是一种大型DNA病毒，对皮肤组织有特殊的偏好。然而，天花只影响人类，这意味着我们能够通过全球范围内的大规模疫苗接种来根除它，而猴痘是由动物病毒库携带的。而且，尽管它的名字叫 "猴痘"，但它并不是源于猴子。"猴痘 "一词是在1958年丹麦首次在圈养灵长类动物中发现该病毒时发明的，但在自然界中，该病毒最常在松鼠和其他啮齿动物中出现。</p>
+                     
+                                <!-- Reading More -->
+                                <div class="post-continue-reading-share mt-30">
+                                    <div class="post-continue-btn">
+                                        <a href="cell.html" class="font-pt" target="_blank"
+                                            title="在新标签页打开专栏">欢迎阅读 <i class="fa fa-chevron-right"
+                                                aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
 
                         <div class="col-12 col-md-4">
