--- a/campus/protest.html
+++ b/campus/protest.html
@@ -255,74 +255,43 @@
                                     <div class="collapse navbar-collapse" id="gazetteMenu">
                                         <ul class="navbar-nav mr-auto">
                                             <li class="nav-item dropdown">
-                                                <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-                                                    目录 Pages
-                                                </a>
-                                                <div aria-labelledby="navbarDropdown" class="dropdown-menu">
-                                                    <a class="dropdown-item" href="../index.html">
-                                                        首页 Home
-                                                    </a>
-                                                    <a class="dropdown-item" href="../category.html">
-                                                        分类 Category
-                                                    </a>
-                                                    <a class="dropdown-item" href="../about.html">
-                                                        介绍 About
-                                                    </a>
-                                                    <a class="dropdown-item" href="../platform.html">
-                                                        平台 Platform
-                                                    </a>
+                                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                                                    role="button" data-toggle="dropdown" aria-haspopup="true"
+                                                    aria-expanded="false">目录 Pages</a>
+                                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                                    <a class="dropdown-item" href="../index.html">首页 Home</a>
+                                                    
+                                                    <a class="dropdown-item" href="../about.html">介绍 About</a>
+                                                    <a class="dropdown-item" href="../platform.html">平台 Platform</a>
                                                 </div>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="../politics/category.html">
-                                                    政治 Politics
-                                                </a>
+                                                <a class='nav-link' href='../politics/category.html'>政治 Politics</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="../business/category.html">
-                                                    财经 Business
-                                                </a>
+                                                <a class="nav-link" href="../society/category.html">社会 Society</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="../society/category.html">
-                                                    社会 Society
-                                                </a>
+                                                <a class="nav-link" href="../commentary/category.html">新闻评论
+                                                    Commentary</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="../tech/category.html">
-                                                    科技 Tech
-                                                </a>
+                                                <a class="nav-link" href="../pandemic/pandemic.html">疫情 Pandemic</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="../recreation/category.html">
-                                                    文体 Recreation
-                                                </a>
+                                                <a class="nav-link" href="../campus/category.html">校园 Campus</a>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" href="../commentary/category.html">
-                                                    新闻评论
-                                                Commentary
-                                                </a>
+                                                <a class="nav-link" href="../global/category.html">国际 Global</a>
                                             </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="../pandemic/pandemic.html">
-                                                    疫情 Pandemic
-                                                </a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="../campus/category.html">
-                                                    校园 Campus
-                                                </a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="../global/category.html">
-                                                    国际 Global
-                                                </a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a class="nav-link" href="../history/category.html">
-                                                    历史 History
-                                                </a>
+                                            <li class="nav-item dropdown">
+                                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">更多内容 Others</a>
+                                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                                    <a class="dropdown-item" href="../tech/category.html">科技 | Tech</a>
+                                                    <a class="dropdown-item" href="../history/category.html">历史 | History</a>
+                                                    <a class="dropdown-item" href="../business/category.html">财经 | Business</a>
+                                                    <a class="dropdown-item" href="../recreation/category.html">文体 | Recreation</a>
+                                                </div>
                                             </li>
                                         </ul>
                                         <!-- Search Form -->
