--- a/campus/category.html
+++ b/campus/category.html
@@ -262,6 +262,60 @@
                 <div class="container">
                     <div class="row justify-content-center section_padding_100">
 
+                        <div class="col-12 col-md-4">
+                          <!-- Gazette Welcome Post -->
+                          <div class="gazette-welcome-post">
+                              <!-- Post Tag -->
+                              <div class="gazette-post-tag">
+                                  <a href="#">Campus</a>
+                              </div>
+                              <h4 class="font-pt">麦迪逊暴力犯罪率低于三年来平均水平</h4>
+                              <p class="gazette-post-date">2022年8月25日</p>
+                              <!-- Post Thumbnail -->
+                              <div class="blog-post-thumbnail my-5">
+                                  <img src="img/crime/crime.jpeg" style="max-height: 250px; width: auto;">
+                              </div>
+                              <!-- Post Excerpt -->
+                              <p>麦迪逊的官员说，他们最新的数据显示，这座城市正在变得越来越安全，但仍有许多工作要做。
+
+在上周三的新闻发布会上，官员们介绍了该市应对犯罪的最新情况，以及该市旨在减少交通事故伤亡人数的倡议——Vision Zero。麦迪逊的 CARES 团队也提供了最新情况，他们负责应对非暴力的精神健康紧急情况。</p>
+                              <!-- Reading More -->
+                              <div class="post-continue-reading-share mt-30">
+                                  <div class="post-continue-btn">
+                                      <a href="crime.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                              class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
+
+                        <div class="col-12 col-md-4">
+                          <!-- Gazette Welcome Post -->
+                          <div class="gazette-welcome-post">
+                              <!-- Post Tag -->
+                              <div class="gazette-post-tag">
+                                  <a href="#">Campus</a>
+                              </div>
+                              <h4 class="font-pt">University Housing 宣布学生工作底薪上涨为15美元一小时；秋季学期公交卡将于8月29日开始发放</h4>
+                              <p class="gazette-post-date">2022年8月23日</p>
+                              <!-- Post Thumbnail -->
+                              <div class="blog-post-thumbnail my-5">
+                                  <img src="img/salary/salary_img_8.png" style="max-height: 250px; width: auto;">
+                              </div>
+                              <!-- Post Excerpt -->
+                              <p>University Housing 宣布所有学生工作的每小时薪资进行3美元一小时的上涨，所有工作的底薪为15美元一小时。
+这次调整生效时间为 2022年8月28日。</p>
+                              <!-- Reading More -->
+                              <div class="post-continue-reading-share mt-30">
+                                  <div class="post-continue-btn">
+                                      <a href="salary.html" class="font-pt" target="_blank" title="在新标签页打开专栏">欢迎阅读 <i
+                                              class="fa fa-chevron-right" aria-hidden="true"></i></a>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+
 
                         <div class="col-12 col-md-4">
                             <!-- Gazette Welcome Post -->
